# scripts

python = import('python')
PYTHON_EXECUTABLE = python.find_installation().path()

SCRIPTS = files(
	'gen_po_files.py', #0
	'gen_mo_files.py', #1
	'gen_updated_po.py', #2
	'cleanup_locales.py', #3
	'backup_locales.py', #4
	'init-locales.py', #5
	'configure_file.py', #6
	'backup_locales_no_more.py' #7
)
